--- a/src/components/Slices/Slices.scss
+++ b/src/components/Slices/Slices.scss
@@ -7,6 +7,6 @@
     .Slice {
         width: 100vw;
         max-width: 100%;
-        margin: 0px auto;
+        margin: 0px auto 1.5rem auto;
     }
 }
