--- a/src/components/CollectionBlock/CollectionBlock.scss
+++ b/src/components/CollectionBlock/CollectionBlock.scss
@@ -1,6 +1,8 @@
 @import '../../scss/app';
 
 .CollectionBlock {
+    position: relative;
+
     .CollectionBlock-Header {
         &:empty {
             padding-bottom: 0px;
@@ -135,6 +137,19 @@
             grid-template-rows: 1fr;
             grid-auto-flow: column;
             scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+
+            @media (min-width: 1500px) {
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+
+                &::-webkit-scrollbar {
+                    display: none;
+                    height: 0px;
+                    width: 0px;
+                    background: transparent;
+                }
+            }
 
             .ProductCard {
                 min-width: 22.5rem;
