--- a/src/components/CollectionBlock/CollectionBlock.scss
+++ b/src/components/CollectionBlock/CollectionBlock.scss
@@ -55,7 +55,7 @@
         .CollectionBlock-Content {
             .ProductCard {
                 width: 100%;
-                min-width: 100%;
+                max-width: 20rem;
             }
         }
 
