--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -7,8 +7,8 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
-    height: 2.5rem;
-    margin: -0.25rem 0px 1rem 0px;
+    height: 3rem;
+    margin: 0.5rem 0rem;
     transform: translateZ(0);
     //padding: 1rem 1rem;
     //background: #efefef;
