--- a/src/components/PageContent/PageContent.scss
+++ b/src/components/PageContent/PageContent.scss
@@ -11,6 +11,7 @@
 
     @media (max-width: 950px) {
         padding: 0px 1.5rem;
+        margin-top: 0.75ren;
     }
 
     &.PageContent-NoPadding {
