--- a/src/components/CollectionBlock/CollectionBlock.scss
+++ b/src/components/CollectionBlock/CollectionBlock.scss
@@ -28,7 +28,8 @@
         display: grid;
         grid-gap: 1rem;
         gap: 1rem;
-        grid-template-columns: repeat(auto-fit, minmax(16.5rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(16.5rem, auto));
+        justify-content: start;
 
         .ProductCard.CollectionBlock-Content-ShowMore {
             display: flex;
