--- a/src/components/PageProvider/PageProvider.scss
+++ b/src/components/PageProvider/PageProvider.scss
@@ -9,11 +9,11 @@ body {
     -webkit-font-smoothing: auto;
     overscroll-behavior-x: none;
     font-size: 12px;
-    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-        sans-serif;
+    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     touch-action: manipulation;
     color: $color-black;
+    text-size-adjust: none;
 
     @media screen and (max-width: 950px) {
         font-size: 10px;
