--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -34,7 +34,7 @@
         bottom: 0px;
         font-size: 1.5rem;
         cursor: pointer;
-        color: #0e0e0e;
+        color: var(--color-text-dark);
         display: flex;
         justify-content: center;
         align-items: center;
