UI: Fix `Header` width on desktop.
This also adds a temp alt tag to `TextBlock`.

--- a/src/components/PageProvider/PageProvider.scss
+++ b/src/components/PageProvider/PageProvider.scss
@@ -37,6 +37,14 @@ body {
 
 .PageProvider {
     background: #fefefe;
+
+    &.SideBar-Open {
+        @media screen and (max-width: 950px) {
+            height: 100vh;
+            height: 100dvh;
+            overflow: hidden;
+        }
+    }
 }
 
 #nprogress {
