--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -7,9 +7,14 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
-    height: 2rem;
-    margin-bottom: 1rem;
+    height: 3.5rem;
     transform: translateZ(0);
+
+    color: var(--color-text-primary);
+    padding: var(--block-padding-large);
+    border-radius: var(--block-border-radius);
+    background: var(--background);
+    background: linear-gradient(320deg, var(--accent-primary) 0%, var(--accent-primary-dark) 100%);
 
     .Breadcrumbs-Content {
         display: flex;
@@ -28,7 +33,6 @@
             font-size: 1.15rem;
             line-height: 1.15rem;
             white-space: nowrap;
-            opacity: 0.75;
             cursor: pointer;
 
             @media (max-width: 950px) {
@@ -37,18 +41,17 @@
 
             .Link {
                 display: block;
-                color: lighten($color: $color-dark, $amount: 5%);
+                color: var(--color-text-primary);
 
                 &:hover,
                 &:active {
-                    color: $color-dark;
-                    color: var(--accent-primary);
+                    color: var(--accent-secondary);
                 }
             }
 
             &:last-child {
                 .Link {
-                    color: $color-primary;
+                    color: var(--accent-secondary);
                     font-weight: 600;
                 }
 
