--- a/pages/app.scss
+++ b/pages/app.scss
@@ -99,7 +99,7 @@ body {
     pointer-events: none;
 }
 #nprogress .bar {
-    background: var(--accent-secondary);
+    background: var(--accent-primary-light);
     position: fixed;
     z-index: 2147483647;
     top: 0;
