API: Don't bundle store prop with all languages.

--- a/pages/app.scss
+++ b/pages/app.scss
@@ -1,7 +1,7 @@
 @import '../src/scss/_app.scss';
 
 // Components
-@import '@/components/Currency/Currency.scss';
+@import '../src/components/Currency/Currency.scss';
 
 html,
 body {
