i18n: Initial support for translating static strings.
This adds translations for a few strings in both Germand and Swedish.
The `header` string are unused at the moment as we need to refactor the
way we render that to support translations.

--- a/pages/app.scss
+++ b/pages/app.scss
@@ -93,6 +93,7 @@ body {
 
     --block-spacer: 1rem;
     --block-spacer-small: 0.75rem;
+    --block-spacer-tiny: 0.5rem;
     --block-spacer-large: 1.5rem;
 
     @media (max-width: 950px) {
