Currency: Remove `Currency` component in favor of shopify's one.
This sadly removes the need for `react-tender`. Shed a tear for our
fallen hero :'^).

--- a/src/components/Currency/Currency.scss
+++ b/src/components/Currency/Currency.scss
@@ -1,8 +1,8 @@
-@import "../../scss/app";
+@import '../../scss/app';
 
 .Currency {
     position: relative;
-    
+
     .Currency-Prefix {
         padding-right: 0.25rem;
     }
@@ -13,7 +13,7 @@
     &.Currency-Sale {
         &:before {
             position: absolute;
-            content: "";
+            content: '';
             left: 0;
             top: 50%;
             right: 0;
