Meta: Start migration to using the `src` folder.
This is step 1 of many before we can properly adopt the `app router`.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
-@import '../src/scss/_app.scss';
+@import 'global.scss';
 
 // Components
-@import '../src/components/Currency/Currency.scss';
+@import '../components/Currency/Currency.scss';
 
 html,
 body {
