Meta: Update SALE color.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -51,7 +51,7 @@ body {
     --color-bright: #fefefe;
     --color-dark: #101418;
 
-    --color-sale: #a53d3a;
+    --color-sale: #b51200;
 
     --color-success: #1b6e1b;
     --color-success-light: color-mix(in srgb, var(--color-success) 65%, var(--color-bright));
