i18n: Initial support for i18n.
This completely resolves NOR-30.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
 @import 'global.scss';
 
 // Components
-@import '../components/Currency/Currency.scss';
+// @import '../components/Currency/Currency.scss';
 @import 'carousel.scss';
 
 html,
