ProductPage+SplitView: Improve layout and styling.

--- a/apps/web/src/components/layout/split-view.module.scss
+++ b/apps/web/src/components/layout/split-view.module.scss
@@ -1,52 +1,48 @@
+@import '@/style/variables.scss';
+
 .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    grid-template-areas: 'aside' 'primary';
-    gap: 0;
-    width: 100%;
-    max-width: var(--page-width);
-    margin: 0 auto;
-    padding: calc(var(--block-spacer-large) * 2) calc(var(--block-spacer) / 2);
-
-    /* Fallback */
     --desktop-width: 0.5;
+    --max-width: min(100vw, var(--page-width));
 
-    @media (min-width: 800px) {
-        display: flex;
-        gap: calc(var(--block-spacer-large) * 2);
-        justify-content: center;
-        align-items: stretch;
-        max-width: 100%;
-        padding: calc(var(--block-spacer-large) * 2) var(--block-spacer-large) var(--block-spacer-large)
-            var(--block-spacer-large);
-    }
-}
-
-.primary {
-    grid-area: primary;
+    overflow: hidden;
+    position: relative;
     display: flex;
     flex-direction: column;
-    margin: var(--block-spacer);
+    justify-self: start;
+    gap: calc(var(--block-spacer-large) * 2);
+    width: 100%;
+    max-width: var(--max-width);
+    margin: 0 auto;
 
-    @media (min-width: 800px) {
-        margin: 0;
-        padding: 0;
-        width: var(--page-width);
-        max-width: calc(calc(var(--page-width) * var(--desktop-width)) - calc(var(--block-spacer-large) * 2));
+    @media (min-width: $breakpoint-mobile) {
+        flex-direction: row;
+        justify-content: center;
+        align-items: stretch;
+
+        .side {
+            width: 100%;
+            max-width: calc(calc(var(--max-width) * var(--desktop-width)) - calc(var(--block-spacer-large) * 2));
+        }
     }
-}
 
-.aside {
-    position: relative;
-    grid-area: aside;
-    margin: var(--block-spacer);
-    margin-top: 0;
+    &.padding {
+        padding: calc(var(--block-spacer-large) * 2) calc(var(--block-spacer) / 2);
 
-    @media (min-width: 800px) {
-        margin: 0;
-        padding: 0;
-        width: var(--page-width);
-        max-width: calc(calc(var(--page-width) * var(--desktop-width)) - calc(var(--block-spacer-large) * 2));
+        @media (max-width: $breakpoint-mobile) {
+            max-width: calc(var(--max-width) - calc(var(--padding) * 2));
+        }
+
+        @media (min-width: $breakpoint-mobile) {
+            padding: calc(var(--block-spacer-large) * 2) var(--block-spacer-large) var(--block-spacer-large)
+                var(--block-spacer-large);
+        }
+
+        & > .side {
+            margin: 0 var(--block-spacer);
+
+            @media (min-width: $breakpoint-mobile) {
+                margin: 0;
+            }
+        }
     }
 }
