--- a/apps/web/src/components/typography/heading.module.scss
+++ b/apps/web/src/components/typography/heading.module.scss
@@ -1,7 +1,8 @@
 .title {
     font-size: 3.25rem;
-    line-height: 1;
+    line-height: normal;
     font-weight: 400;
+    margin-top: -0.5rem;
 
     &.bold {
         font-weight: 800;
