ProductCard: Improve styling.

--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -66,6 +66,7 @@ body {
 
     --color-gray: #989898;
     --color-green: #1b6e1b;
+    --color-green-rgb: 27, 111, 27;
     --color-green-light: #e1faea;
 
     --color-block-pastel-lime: #cce2cb;
