Header: Refactor `<Header/>` to server components.

--- a/apps/web/src/scss/carousel.scss
+++ b/apps/web/src/scss/carousel.scss
@@ -6,6 +6,7 @@
     box-sizing: border-box;
 
     user-select: none;
+    -webkit-user-select: none;
     touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
 
