--- a/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
+++ b/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
@@ -1,5 +1,11 @@
 @import '@/style/variables.scss';
 
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--block-spacer);
+}
+
 @media (min-width: $breakpoint-mobile) {
     .headingPrimary {
         gap: var(--block-spacer);
