--- a/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
+++ b/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
@@ -3,12 +3,16 @@
 .content {
     display: flex;
     flex-direction: column;
-    gap: var(--block-spacer);
+    gap: var(--block-padding-large);
 }
 
 @media (min-width: $breakpoint-mobile) {
+    .content {
+        gap: var(--block-spacer-large);
+    }
+
     .headingPrimary {
-        gap: var(--block-spacer);
+        gap: var(--block-spacer-large);
     }
 
     .headingAside {
