--- a/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
+++ b/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
@@ -1,23 +1,41 @@
 @import '@/style/variables.scss';
 
-.content {
-    display: flex;
-    flex-direction: column;
-    gap: var(--block-padding-large);
-}
+.container {
+    .gallery {
+        position: sticky;
+        top: 10rem;
+    }
 
-@media (min-width: $breakpoint-mobile) {
     .content {
-        gap: var(--block-spacer-large);
-    }
-
-    .headingPrimary {
-        gap: var(--block-spacer-large);
-    }
-
-    .headingAside {
         display: flex;
-        align-self: flex-end;
-        justify-content: flex-end;
+        flex-direction: column;
+        gap: var(--block-spacer-huge);
+    }
+
+    .prismicDivider {
+        width: 90%;
+        height: var(--block-border-width-small);
+        margin: var(--block-spacer) 5%;
+        background: var(--color-block);
+    }
+
+    @media (min-width: $breakpoint-mobile) {
+        .prismicDivider {
+            width: 80%;
+            margin: var(--block-spacer-large) 10%;
+        }
+        .content {
+            gap: var(--block-spacer-large);
+        }
+
+        .headingPrimary {
+            gap: var(--block-spacer-large);
+        }
+
+        .headingAside {
+            display: flex;
+            align-self: flex-start;
+            justify-content: flex-end;
+        }
     }
 }
